bugfix - hidden navbar on mobile

--- a/portfolio/src/sections/navbar/navbar.css
+++ b/portfolio/src/sections/navbar/navbar.css
@@ -42,7 +42,7 @@
 .mobile > a {
   display: flex;
 
-  padding: 0.8rem 1rem;
+  padding: 0.8rem 1.1rem;
   border-radius: 50%;
 
   background: transparent;
